--- a/index.html
+++ b/index.html
@@ -3,77 +3,108 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./styles/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <script src="./scripts/index.js"></script>
+  
   
   <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { color: hsl(228, 45%, 44%); }  asydvgabhsd
   </style>
 </head>
 <body>
+  <header>
+    <div>
+        <img src="images/logo.svg">
+        <button onclick="showMenu()" >Menu</button>
+    </div>
+    
+    <div id="menumorado" class="menuMorado"> <!-- Div morado -->
+        <div>
+            <uls>
+                <li>Features</li>
+                <li>Pricing</li>
+                <li>Resources</li>    
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>Login</li>
+                <li>Sign Up</li>
+            </ul>
+        </div>
+    </div>  
 
-  Features
-  Pricing
-  Resources
+        
+  </header>
+  
+  <section>
+    More than just shorter links
 
-  Login
-  Sign Up
+    Build your brand’s recognition and get detailed insights 
+    on how your links are performing.
 
-  More than just shorter links
+    Get Started
+  </section>
 
-  Build your brand’s recognition and get detailed insights 
-  on how your links are performing.
+  <section>
+    Shorten It!
+  </section> 
+  <section>
+    Advanced Statistics
 
-  Get Started
+    Track how your links are performing across the web with our 
+    advanced statistics dashboard.
 
-  Shorten It!
+    Brand Recognition
 
-  Advanced Statistics
+    Boost your brand recognition with each click. Generic links don’t 
+    mean a thing. Branded links help instil confidence in your content.
 
-  Track how your links are performing across the web with our 
-  advanced statistics dashboard.
+    Detailed Records
 
-  Brand Recognition
+    Gain insights into who is clicking your links. Knowing when and where 
+    people engage with your content helps inform better decisions.
 
-  Boost your brand recognition with each click. Generic links don’t 
-  mean a thing. Branded links help instil confidence in your content.
+    Fully Customizable
 
-  Detailed Records
+    Improve brand awareness and content discoverability through customizable 
+    links, supercharging audience engagement.
+  </section>
 
-  Gain insights into who is clicking your links. Knowing when and where 
-  people engage with your content helps inform better decisions.
+  <section>
+    Boost your links today
 
-  Fully Customizable
+    Get Started
+  </section>
 
-  Improve brand awareness and content discoverability through customizable 
-  links, supercharging audience engagement.
+  <section>
 
-  Boost your links today
+    <img> 
 
-  Get Started
+    Features
 
-  Features
+    Link Shortening
+    Branded Links
+    Analytics
 
-  Link Shortening
-  Branded Links
-  Analytics
+    Resources
 
-  Resources
+    Blog
+    Developers
+    Support
 
-  Blog
-  Developers
-  Support
+    Company
 
-  Company
-
-  About
-  Our Team
-  Careers
-  Contact
+    About
+    Our Team
+    Careers
+    Contact
+  </section>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
