--- a/index.html
+++ b/index.html
@@ -6,35 +6,36 @@
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <script src="./scripts/index.js"></script>
-  
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }  asydvgabhsd
+    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-  <header>
-    <div>
+  <header class="container">
+    <div class="menuLogo">
         <img src="images/logo.svg">
-        <button onclick="showMenu()" >Menu</button>
+        <button onclick="showMenu()" class="transparentButton"><img src="./images/open-menu.svg" alt="" height="20px"></button>
     </div>
     
     <div id="menumorado" class="menuMorado"> <!-- Div morado -->
         <div>
-            <uls>
+            <ul>
                 <li>Features</li>
                 <li>Pricing</li>
                 <li>Resources</li>    
             </ul>
         </div>
+        <div style="border-top: .1px solid white; width:90%;margin-left: 5%;"></div>
         <div>
             <ul>
                 <li>Login</li>
-                <li>Sign Up</li>
+                <li><button id="signButton" class="customButton">Sign Up</button></li>
             </ul>
         </div>
     </div>  
