seccion 3 placeholder y btn

--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
         </p>
       </div>
 
-      <div class="gs-btn-div">
+      <div class="gs-btn-div div-center">
         <button class="gs-btn" >Get Started</button>
       </div>
       </section>
   </section>
 
-  <section class="shrtn-link-sec">
-
-    <div>
-      <input type="text" placeholder="Shorten a link here...">
+  <section class="div-center bicolor-background">
+    <div class="shrtn-link-sec">
+      <div class="gs-btn-div div-center">
+        <input class="input-shrtn-link" type="text" placeholder="   Shorten a link here...">
+      </div>
+      <div class="gs-btn-div div-center">
+        <button class="btn-short-it">Shorten It!</button>
+      </div>
     </div>
-
-    <div>
-      <button>Shorten It!</button>
-    </div>
-  </section> 
+      
+  </section>
 
   <section>
-    Advanced Statistics
 
     Track how your links are performing across the web with our 
     advanced statistics dashboard.
@@ -94,6 +94,7 @@
     people engage with your content helps inform better decisions.
 
     Fully Customizable
+    
 
     Improve brand awareness and content discoverability through customizable 
     links, supercharging audience engagement.
